# FAQ_Of_LLM_Interview

./: .env.example  .gitignore  README.md  install.py  pyproject.toml  工作职业规划.md
1-大模型应用基础/: CNN卷积神经网络基础.md  Yolo基础知识.md
3-面试问题记录/2025_interview_log/合并面试/: 个人存储的各方向速成问题及解答-2025.md  所有面试合并总结.md
3-面试问题记录/2026_interview_log/: Xtransfer.md  cctc.md  gate.md  上海知满科技.md  上海途程旅游.md  临港算力-2.md  临港算力.md  倍通数据.md  南瑞.md  好三由.md  宁波全拓海伦-2.md  宁波全拓海伦-3.md  宁波全拓海伦.md  平安.md  律商联讯.md  斗象.md  星河智联.md  智观信息.md  淘天集团.md  瑟壳数字-2.md  瑟壳数字-3.md  瑟壳数字.md  瑟客数字.md  益海嘉里-2.md  益海嘉里.md  祥承科技.md  赛力斯.md
3-面试问题记录/2026_interview_log/docs/: agent相关.md  rag优化.md  transformer相关.md  vlm相关.md  强化学习相关.md  微调相关.md  必会算法题目.md  机器学习.md  部署-推理加速.md  针对信息物理系统线性欺诈攻击的水印加密策略.md
z_utils/: db_cache.py  get_json.py  get_proxy.py  get_tree.py  hash_x.py  llm_tools.py  logging_config.py  remove_comments.py
